--- a/07_POZICIONIRANJE/FLOAT/vezba1/style.css
+++ b/07_POZICIONIRANJE/FLOAT/vezba1/style.css
@@ -4,9 +4,11 @@
 }
 
 nav {
-    /* width: 100%; */
+    position: fixed;
+    top: 0;
     overflow:hidden;
     background-color: black;
+    width: 100%;
 }
 ul{
     list-style-type: none;
@@ -18,6 +20,7 @@ ul{
 li{
 float:left;
 width: 25%;
+outline: 1px solid gray;
 border:1px solid gray;
 height: 30px;
 position:relative;
