--- a/28_CHAT_PROJECT/style.css
+++ b/28_CHAT_PROJECT/style.css
@@ -25,7 +25,7 @@ body{
     flex: 1;
     flex-direction: row;
     justify-content: center;
-    
+    height:  40px;
     margin: 20px;
 }
 
@@ -44,4 +44,4 @@ body{
     background-color:orange;
     color:black;
 }
-#inputSection
+
