--- a/28_CHAT_PROJECT/style.css
+++ b/28_CHAT_PROJECT/style.css
@@ -5,10 +5,20 @@
 }
 
 body{
+    display:flex;
+    justify-content:center;
     height: 100vh;
     text-align: center;
     background:black;
     color:rgb(180, 104, 28);
+}
+#chatContainer{
+    height: 95vh;
+    width:60vh;
+    border: 2px solid rgb(180, 104, 28);
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px rgb(180, 104, 28);
+    margin:20px 0;
 }
 #chat{
     display: flex;
@@ -17,7 +27,7 @@ body{
     justify-content: space-around;
     align-items: center;
     height: 100vh;
-    border: 1px solid rgb(180, 104, 28);
+    
 }
 #headerSection{
     display: flex;
@@ -42,7 +52,7 @@ body{
     border: 1px solid black; 
     border-radius: 5px;
     height: 25%;
-    width: 80%;
+    width: 95%;
 }
 
 .btn {
@@ -66,6 +76,10 @@ body{
     color:black;
     padding: 5px;
     border-radius: 5px;
+    margin-bottom: 10px;
+}
+#inputSection input[type="submit"] {
+    margin:10px 0;
 }
 
 
@@ -73,6 +87,10 @@ body{
 
  /*--- Mobile ----- */
 @media screen and (max-width: 350px) {
+    #chatContainer{
+        margin:0;
+        height: 99vh;
+    }
     #hamburgerMenu{
         display: flex;
         flex-direction: column;
@@ -106,11 +124,5 @@ body{
     }
     #inputSection input[type="text"] {
         width: 90%;
-    }
-}
-/*------ LARGE SCREENS ---- */
-@media screen and (min-width: 780px){
-    #messageSection {
-        width: 640px;
     }
 }
