--- a/28_CHAT_PROJECT/style.css
+++ b/28_CHAT_PROJECT/style.css
@@ -47,6 +47,7 @@ body{
     flex-wrap: wrap; 
 }
 #messageSection {
+
     background-color:rgb(180, 104, 28);
     color: black;
     border: 1px solid black; 
@@ -55,7 +56,16 @@ body{
     width: 95%;
     overflow-y: scroll;
 }
-
+#messageSection li{
+    display: block;
+    background-color:black;
+    color: rgb(180, 104, 28);
+    border-bottom: 1px solid black ;
+    border-radius: 30px 30px 0 30px;
+    width: 55%;
+    padding: 5px;
+    margin: 5px;
+}
 .btn {
     background-color: black;
     color:rgb(180, 104, 28);
